--- a/expenses/templates/add_expense.html
+++ b/expenses/templates/add_expense.html
@@ -13,7 +13,8 @@
         <h3>{% trans "Финансовый расход" %}</h3>
         <form method="post" class="styled-form">
             {% csrf_token %}
-            {% for field in expense_form %}
+            <input type="hidden" name="form_type" value="expense">
+            {% for field in expense_form.visible_fields %}
                 <div class="form-group">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field|add_class:"form-control" }}
@@ -31,7 +32,8 @@
         <h3>{% trans "Показания счётчиков" %}</h3>
         <form method="post" class="styled-form">
             {% csrf_token %}
-            {% for field in meter_form %}
+            <input type="hidden" name="form_type" value="meter">
+            {% for field in meter_form.visible_fields %}
                 <div class="form-group">
                     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                     {{ field|add_class:"form-control" }}
